--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "mysql": "^2.11.1",
+    "node-uuid": "^1.4.7"
   }
 }
